Bug/gpt response compact (#994)
* refactor question builder for gpt feature
* removing logic that prepends all applied tags to question builder
* passing first tag as context to gptservice
* setting context before sending the question

* refactoring setup message

* improving context

* refactoring context for more appropriate responses

* get matching tag or default for context

* sending instructions along with question, instead of setup

* prompt for shorter responses

* values responsible for tweaking AI responses are not declared as constants, docs are also added for such values